# citizenAI

./: .dockerignore  .gitignore  Dockerfile  README.md  apis.txt  app_fastapi.py  database.py  docker-compose.yml  faiss_index.idx  faiss_indexer.py  faiss_search.py  init_db.py  metadata.pkl  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  deploy.yml
frontend/: index.html  signin.html  signup.html
frontend/static/css/: signin.css  signup.css  styles.css
frontend/templates/: base.html  index.html  login.html  signup.html
models/: user.py
tests/ci/: test_app.py
tests/local/: test_app_local.py
