[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Olabode Omoyele <yele.olabode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.7.0"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
distro = "1.9.0"
faiss-cpu = "1.9.0.post1"
fastapi = "0.115.6"
frozenlist = "1.5.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.0"
multidict = "6.1.0"
numpy = "2.2.0"
openai = "1.57.1"
packaging = "24.2"
pluggy = "1.5.0"
propcache = "0.2.1"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
python-dotenv = "1.0.1"
requests = "2.32.3"
sniffio = "1.3.1"
starlette = "0.41.3"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
yarl = "1.18.3"
sentence-transformers = "^3.3.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.14.1"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"
pytest-cov = "^6.0.0"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
